vehicle/tests/golden/error/dataset/invalidContainerType/dataset-nat-4.idx
../../../../datasets/dataset-nat-4.idx